manifests/backend-delay/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-delay
  namespace: health-checks
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: backend-delay
